# chess-daniel

./: .gitignore  Cargo.toml  LICENSE
src/: autoplay.rs  benchmark.rs  chess_game.rs  gamestate.rs  lib.rs  main.rs  mod_piece.rs  mod_position.rs  move_struct.rs  performance_test.rs  piece.rs  position.rs  scores.rs  search.rs  uci.rs
