cargo-features = ["profile-rustflags"]

[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
# rayon = "1.10.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = true
rustflags = ["-C", "target-cpu=native", "-C", "target-feature=-avx"]
